// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notification component should close correctly with button 1`] = `
<body>
  <div />
</body>
`;

exports[`notification component should render a white background notification 1`] = `
<body
  style="background: rgb(0, 0, 0);"
>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(255,255,255);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render correctly 1`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
      <h2>
        test
      </h2>
      <h3>
        test
      </h3>
      <span>
        test
      </span>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 1`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 2`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 3`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 4`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 5`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 6`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 7`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 8`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 9`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render harmony correctly 10`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render no harmony 1`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render notification type correctly 1`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi emVcHX"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render notification type correctly 2`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi kKeVcZ"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render notification type correctly 3`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi cFnQBZ"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render notification type correctly 4`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render notification type correctly 5`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi kKeVcZ"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 1`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ linwii"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 2`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ hfpaCx"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 3`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ cBnEAR"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 4`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fIZRfA"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 5`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ bYGgfI"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 6`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ elUkKT"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 7`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ fA-dejy"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 8`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ hHtsR"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`notification component should render position correctly 9`] = `
<body>
  <div />
  <div
    class="sc-bczRLJ jYcvoV"
    id="test"
  >
    <div
      class="sc-gsnTZi bHbWND"
      style="color: rgb(0, 0, 0); z-index: 9999;"
    >
      <div
        class="sc-dkzDqf kLgSvk"
      >
        <button
          style="fill: rgb(0,0,0);"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;
